添加logback日志模块

--- a/scn-commons/scn-common-starter/pom.xml
+++ b/scn-commons/scn-common-starter/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>scn-common-starter</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 </project>
