--- a/scn-business/user-center/pom.xml
+++ b/scn-business/user-center/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>scn-log-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.libinbin</groupId>
+            <artifactId>scn-rocketmq-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
