--- a/scn-commons/pom.xml
+++ b/scn-commons/pom.xml
@@ -18,6 +18,7 @@
         <module>scn-db-starter</module>
         <module>scn-common-starter</module>
         <module>scn-log-starter</module>
+        <module>scn-rocketmq-starter</module>
     </modules>
 
 
