修改数据源配置方式

--- a/scn-business/user-center/src/main/resources/bootstrap.yml
+++ b/scn-business/user-center/src/main/resources/bootstrap.yml
@@ -16,7 +16,23 @@ spring:
           data-id: common.yaml
           group: common-config
           refresh: true
+        ext-config[1]:
+          data-id: common2.yaml
+          group: common-config
+          refresh: true
         namespace: ${zlt.nacos.env}
       discovery:
         server-addr: ${zlt.nacos.server-addr}
         namespace: ${zlt.nacos.env}
+#当遇到相同名字时是否允许覆盖
+  main:
+    allow-bean-definition-overriding: true
+
+mybatis-plus:
+  mapper-locations: classpath:/mapper/*Mapper.xml
+  #实体扫描，多个package用逗号或者分号分隔
+  typeAliasesPackage: com.central.common.model
+
+  global-config:
+    db-config:
+      id-type: auto
